tests/negative/test_block_eval_passing_no_pass.orb
fnc main () () {
    eval (block i32 {
        sym (x 0);
    });
};